--- a/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/application.properties
+++ b/week-11/day_02_Spring+MySQL/Todos_MySQL/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/todo
-spring.datasource.username=root
-spring.datasource.password=Sdstem005
+spring.datasource.username=lorinczkinga
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.logging.level.org.hibernate.SQL=debug
